--- a/src/App.scss
+++ b/src/App.scss
@@ -3,24 +3,35 @@ $brandbackground: #f4f4f4;
 $brandborder: solid 1px #333;
 
 body {
-  background: $brandcolor;
+  background: $brandbackground;
 }
 
-.container {
+.update_status_container {
   background: $brandbackground;
   padding-bottom: 0.5rem;
-  
+  border-radius: 0.25rem;
+  margin-top: 1rem;
+  border: $brandborder;
+}
+
+.status_card_container {
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  margin-top: 0.5rem;
+  background: $brandcolor;
 }
 
 .statusCard {
   padding: 0.5rem;
-  box-shadow: 2.5px 2.5px $brandcolor;
 }
 
 .buttonbox {
   display: flex;
   justify-content: flex-end;
-  
+}
+
+.buttonbox Button {
+  margin-left: 0.25rem;
 }
 
 .likes {
